[PRE] Add authentication methods on #4
