# app/Domain/Contracts/Services/AuthenticationServiceContract.php
@@ -1,0 +1,13 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Domain\Contracts\Services;
+
+use App\Domain\ValueObjects\Authentication\LoginResultVO;
+use App\Domain\ValueObjects\Authentication\LoginVO;
+
+interface AuthenticationServiceContract
+{
+    public function login(LoginVO $vo): LoginResultVO;
+}
